@@ -3,17 +3,10 @@ OooooooooooooooooooooooooooooO
 OooooooooooooooooooooooooooooO
 
 
-Q1: I can't use porg to log it's own installation: "error while loading shared
-    libraries: /usr/lib/libporg-log.so: cannot open shared object file: No such
-    file or directory"
-
-R1: To log the own porg's installation, type "make logme" after "make install".
-
-
-Q2: When building LFS, porg does not properly log the installation of glibc
+Q1: When building LFS, porg does not properly log the installation of glibc
     in chapter 6 (some files are not logged)
 
-R2: This is because in the chapter 6 some of glibc files are installed
+R1: This is because in the chapter 6 some of glibc files are installed
 	using statically linked sln. To have a proper glibc log you can run the
 	following in chroot after installing glibc:
 
@@ -31,17 +24,17 @@ R2: This is because in the chapter 6 some of glibc files are installed
 		find /lib | porg -lp+ glibc-<GLIBC_VERSION>
 
 
-Q3: Is it safe to launch porg with sudo?
+Q2: Is it safe to launch porg with sudo?
 
-R3: Yes. Here you can see a thread in the paco mailing list that discusses this
+R2: Yes. Here you can see a thread in the paco mailing list that discusses this
     issue:
 
 	http://sourceforge.net/mailarchive/message.php?msg_name=op.s0crq8an4bwnuy%40slack.homenet
 
 
-Q4: Is it safe to launch sudo with porg?
+Q3: Is it safe to launch sudo with porg?
 
-R4: No. For example the command:
+R3: No. For example the command:
 
         porg -lp foobar-1.0 "sudo make install"
 
